js/js.translator/testData/incremental/invalidationWithPL/changeFunctionSignature/lib1/l1.4.bug.kt
// this is known issue, that return type doesn not affect IdSignature
// https://youtrack.jetbrains.com/issue/KT-51707
fun foo() = "4"
